<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_item_home"/>

        <item android:id="@+id/nav_aboutapp"
            android:icon="@drawable/aboutapp"
            android:title="@string/menu_item_aboutapp"/>

        <item android:id="@+id/nav_search"
            android:icon="@drawable/search"
            android:title="@string/menu_item_search"/>

        <item android:id="@+id/nav_beautytips"
            android:icon="@drawable/face"
            android:title="@string/menu_item_beautytips"/>

        <item android:id="@+id/nav_favorite"
            android:icon="@drawable/favon"
            android:title="@string/menu_item_favproduct"/>

        <item android:id="@+id/nav_feedback"
            android:icon="@drawable/feedback"
            android:title="@string/menu_item_feedback"/>

        <item android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_item_logout"/>

    </group>


</menu>
